Separate appearance settings panel
Signed-off-by: makiam <maxtemplaar@gmail.com>